[MenuLens] add privacy-policy

--- a/menu-lens/index.html
+++ b/menu-lens/index.html
@@ -104,8 +104,7 @@
                             <i class="fas fa-external-link-alt"></i>
                         </a>
 
-                        <a href="https://www.notion.so/1deccf1895e981748fa5cfeb48071325?pvs=21" class="support-link"
-                            target="_blank">
+                        <a href="privacy-policy.html" class="support-link">
                             <div class="support-icon">
                                 <i class="fas fa-shield-alt"></i>
                             </div>
@@ -113,7 +112,6 @@
                                 <h4>개인정보 처리방침</h4>
                                 <p>개인정보 보호 및 처리 방침 확인</p>
                             </div>
-                            <i class="fas fa-external-link-alt"></i>
                         </a>
                     </div>
                 </div>
@@ -131,7 +129,7 @@
                 <p class="footer-text">해외 여행을 더욱 맛있게, 더욱 쉽게</p>
                 <div class="footer-links">
                     <a href="https://forms.gle/dwzofxydGgeWParM6" target="_blank">문의하기</a>
-                    <a href="https://www.notion.so/1deccf1895e981748fa5cfeb48071325?pvs=21" target="_blank">개인정보처리방침</a>
+                    <a href="privacy-policy.html">개인정보처리방침</a>
                 </div>
             </div>
         </div>
